--- a/css/_tpl-portfolio.scss
+++ b/css/_tpl-portfolio.scss
@@ -28,7 +28,7 @@
             padding-bottom: 23%;
         }
         @include mn1920 {
-            width: 405px;
+            // width: 405px;
             padding-bottom: 0;
             height: 355px;
         }
@@ -39,14 +39,12 @@
         right: 0;
         top: 0;
         bottom: 0;
-        padding: 20px;
+        padding: 3%;
         display: -webkit-flex;
         display: -moz-flex;
         display: -ms-flex;
         display: -o-flex;
         display: flex;
-        align-items: center;
-        justify-content: center;
         overflow: hidden;
         &:hover {
             .portfolio__caption {
@@ -88,6 +86,8 @@
     }
     &__img {
         display: block;
+        flex: 0 0 auto;
+        margin: auto;
     }
 }
 
