--- a/css/main.css
+++ b/css/main.css
@@ -2618,7 +2618,8 @@ input[type=email] {
     text-align: left;
     text-transform: uppercase;
     font-weight: 700;
-    max-width: 300px; }
+    max-width: 300px;
+    z-index: 99; }
   .header-mobile .navbar-nav > li > a {
     line-height: 1;
     padding-top: 7px;
@@ -2654,14 +2655,15 @@ input[type=email] {
     text-decoration: none; }
 
 .menu-btn {
-  position: absolute;
+  position: fixed;
   top: 5px;
   right: 5px;
   width: 40px;
   padding: 7px;
   border: 1px solid black;
   border-radius: 4px;
-  margin: 0; }
+  margin: 0;
+  z-index: 99; }
   .menu-btn span {
     display: block;
     height: 3px;
@@ -2674,6 +2676,9 @@ input[type=email] {
   @media (min-width: 992px) {
     .menu-btn {
       display: none; } }
+
+.admin-bar .menu-btn {
+  margin-top: 50px; }
 
 .footer {
   background: #444;
@@ -3004,6 +3009,8 @@ div.wpcf7 .ajax-loader {
   .form-content__body {
     font-size: 14px;
     padding: 20px 0 10px; }
+  .form-content_without-lead .form__row_lead {
+    display: none !important; }
   .form-content .form__inner {
     font-size: 0; }
   .form-content .form__row {
@@ -3497,6 +3504,8 @@ img {
   @media (min-width: 550px) {
     .portfolio {
       text-align: left; } }
+  .portfolio__wrapper {
+    position: relative; }
   .portfolio__item {
     font-size: 16px;
     display: inline-block;
@@ -3570,8 +3579,101 @@ img {
     overflow: hidden; }
   .portfolio__img {
     display: block;
-    flex: 0 0 auto;
-    margin: auto; }
+    margin: auto;
+    max-width: 70%;
+    max-height: 70%; }
+
+.portfolio-filter {
+  position: absolute;
+  z-index: 1;
+  top: 50px;
+  right: 30px;
+  max-width: 50px;
+  max-height: 50px;
+  overflow: hidden;
+  transition: max-width 1s 0s, max-height 1s 0s; }
+  .portfolio-filter.is-hover {
+    max-width: 260px;
+    max-height: 500px; }
+    @media (min-width: 550px) {
+      .portfolio-filter.is-hover {
+        max-width: 500px; } }
+  .portfolio-filter__btn {
+    width: 50px;
+    height: 50px;
+    background-color: #999;
+    position: absolute;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 18px;
+    cursor: pointer;
+    transition: background-color .5s 0s; }
+    .portfolio-filter__btn:hover {
+      background-color: #f8615a; }
+    .portfolio-filter__btn span {
+      display: block;
+      width: 25px;
+      height: 4px;
+      margin-bottom: 4px;
+      background: white; }
+      .portfolio-filter__btn span + span {
+        width: 19px; }
+        .portfolio-filter__btn span + span + span {
+          width: 8px; }
+
+.portfolio-menu {
+  margin-left: 60px;
+  background: white;
+  padding: 30px;
+  box-shadow: 0 3px 15px rgba(0, 27, 46, 0.2);
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase; }
+  .portfolio-menu__link {
+    cursor: pointer;
+    margin-top: 10px; }
+    @media (min-width: 550px) {
+      .portfolio-menu__link {
+        white-space: nowrap; } }
+    .portfolio-menu__link:first-child {
+      margin-top: 0;
+      color: #999; }
+    .portfolio-menu__link:hover {
+      color: #f8615a; }
+
+.portfolio__item-sizer, .portfolio__item_all {
+  width: 100%; }
+  @media (min-width: 550px) {
+    .portfolio__item-sizer, .portfolio__item_all {
+      width: 50%; } }
+  @media (min-width: 768px) {
+    .portfolio__item-sizer, .portfolio__item_all {
+      width: 33.33%; } }
+  @media (min-width: 1400px) {
+    .portfolio__item-sizer, .portfolio__item_all {
+      width: 25%; } }
+  @media (min-width: 1921px) {
+    .portfolio__item-sizer, .portfolio__item_all {
+      width: 300px; } }
+
+.portfolio__item_all {
+  max-width: none;
+  height: 200px;
+  padding-bottom: 0;
+  transition: none; }
+  @media (min-width: 1400px) {
+    .portfolio__item_all {
+      height: 250px; } }
+  @media (min-width: 1600px) {
+    .portfolio__item_all {
+      height: 300px; } }
+
+.portfolio__item_all img {
+  max-width: 70%;
+  max-height: 70%; }
 
 .case {
   margin: 20px 0 40px; }
