--- a/css/_tpl-portfolio.scss
+++ b/css/_tpl-portfolio.scss
@@ -110,6 +110,21 @@
         @include mn550 {
             max-width: 500px;
         }
+        .portfolio-filter__btn {
+            background-color: $red;
+            span {
+                position: absolute;
+                width: 35px;
+                top: 23px;
+                transform: rotate(-45deg);
+                &+span {
+                    transform: rotate(45deg);
+                    &+span {
+                        opacity: 0;
+                    }
+                }
+            }
+        }
     }
     &__btn {
         width: 50px;
@@ -124,19 +139,18 @@
         padding-top: 18px;
         cursor: pointer;
         transition: background-color .5s 0s;
-        &:hover {
-            background-color: $red;
-        }
         span {
             display: block;
             width: 25px;
             height: 4px;
             margin-bottom: 4px;
             background: white;
+            transition: all .5s 0s;
             &+span {
                 width: 19px;
                 &+span {
                     width: 8px;
+                    opacity: 1;
                 }
             }
         }
