--- a/css/main.css
+++ b/css/main.css
@@ -3598,6 +3598,17 @@ img {
     @media (min-width: 550px) {
       .portfolio-filter.is-hover {
         max-width: 500px; } }
+    .portfolio-filter.is-hover .portfolio-filter__btn {
+      background-color: #f8615a; }
+      .portfolio-filter.is-hover .portfolio-filter__btn span {
+        position: absolute;
+        width: 35px;
+        top: 23px;
+        transform: rotate(-45deg); }
+        .portfolio-filter.is-hover .portfolio-filter__btn span + span {
+          transform: rotate(45deg); }
+          .portfolio-filter.is-hover .portfolio-filter__btn span + span + span {
+            opacity: 0; }
   .portfolio-filter__btn {
     width: 50px;
     height: 50px;
@@ -3611,18 +3622,18 @@ img {
     padding-top: 18px;
     cursor: pointer;
     transition: background-color .5s 0s; }
-    .portfolio-filter__btn:hover {
-      background-color: #f8615a; }
     .portfolio-filter__btn span {
       display: block;
       width: 25px;
       height: 4px;
       margin-bottom: 4px;
-      background: white; }
+      background: white;
+      transition: all .5s 0s; }
       .portfolio-filter__btn span + span {
         width: 19px; }
         .portfolio-filter__btn span + span + span {
-          width: 8px; }
+          width: 8px;
+          opacity: 1; }
 
 .portfolio-menu {
   margin-left: 60px;
@@ -4264,5 +4275,29 @@ img {
   .b-why__desc {
     margin-top: 20px;
     line-height: 1.8; }
+
+.content__inner_reviews .content__title {
+  text-align: center; }
+.content__inner_reviews .article {
+  color: #999; }
+
+.b-reviews {
+  margin: 20px 0;
+  text-align: center;
+  font-size: 0; }
+  @media (min-width: 1400px) {
+    .b-reviews {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around; } }
+  .b-reviews__item {
+    display: inline-block;
+    padding: 20px; }
+  .b-reviews__img {
+    background: url("") top no-repeat;
+    background-size: contain;
+    width: 270px;
+    height: 370px;
+    border: 1px solid #e5e5e5; }
 
 /*# sourceMappingURL=main.css.map */
