--- a/css/_tpl-team-about.scss
+++ b/css/_tpl-team-about.scss
@@ -24,6 +24,9 @@
         text-transform: uppercase;
         margin: 30px 0;
     }
+    &__item {
+        padding: 0 1%;
+    }
     &__digits {
         display: -webkit-flex;
         display: -moz-flex;
@@ -42,10 +45,13 @@
         }
     }
     &__desc {
-        font-size: 10px;
+        font-size: 8px;
         font-weight: 700;
         line-height: 1.2;
         text-transform: uppercase;
+        @include mn550 {
+            font-size: 14px;
+        }
         @include mn768 {
             font-size: 20px;
         }
