--- a/css/_tpl-single.scss
+++ b/css/_tpl-single.scss
@@ -50,8 +50,8 @@
         	visibility: hidden;
             position: absolute;
             transition: all 1s 0s;
-            left: 33px;
-            top: 100%;
+            right: 0;
+            top: 120%;
             width: 182px;
             padding: 10px;
             border: 1px solid;
