--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -6,10 +6,18 @@
     left: 0;
     top: 0;
     bottom: 0;
-    padding: 70px 30px 30px;
     z-index: 1;
     @include mn992 {
         display: block;
+    }
+    &__inner {
+        background: white;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        padding: 70px 30px 30px;
     }
     &__top {
         text-align: center;
@@ -217,6 +225,59 @@
         transition: none !important;
         &:hover {
             background-position: right;
+        }
+    }
+}
+
+.form-get-offer {
+    width: 300px;
+    padding: 20px;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -2%;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 1px 1px 2px lightgrey;
+    transition: left 1s 0s;
+    z-index: -1;
+    text-align: center;
+    &.opened {
+        left: 100%;
+    }
+    &__inner {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .form__row {
+        margin-bottom: 20px;
+    }
+    .wpcf7-form-control:not(.wpcf7-submit) {
+        border-color: $darkgrey;
+    }
+    .wpcf7-response-output {
+        margin: 20px 0;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+    }
+    .form-get-offer__close {
+        text-decoration: none;
+        position: absolute;
+        color: $red;
+        top: -70px;
+        right: 0;
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        transition: transform .5s 0s;
+        transform: rotate(0deg);
+        &:hover{
+	        color: $red;
+        	text-decoration: none;
+        	transform: rotate(360deg);
         }
     }
 }
