--- a/css/main.css
+++ b/css/main.css
@@ -2787,11 +2787,18 @@ input[type=email] {
   left: 0;
   top: 0;
   bottom: 0;
-  padding: 70px 30px 30px;
   z-index: 1; }
   @media (min-width: 992px) {
     .sidebar {
       display: block; } }
+  .sidebar__inner {
+    background: white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 70px 30px 30px; }
   .sidebar__top {
     text-align: center; }
   .sidebar__logo {
@@ -2936,6 +2943,51 @@ input[type=email] {
     .social__icon:hover {
       background-position: right; }
 
+.form-get-offer {
+  width: 300px;
+  padding: 20px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -2%;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 1px 1px 2px lightgrey;
+  transition: left 1s 0s;
+  z-index: -1;
+  text-align: center; }
+  .form-get-offer.opened {
+    left: 100%; }
+  .form-get-offer__inner {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
+  .form-get-offer .form__row {
+    margin-bottom: 20px; }
+  .form-get-offer .wpcf7-form-control:not(.wpcf7-submit) {
+    border-color: #666; }
+  .form-get-offer .wpcf7-response-output {
+    margin: 20px 0;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%; }
+  .form-get-offer .form-get-offer__close {
+    text-decoration: none;
+    position: absolute;
+    color: #f8615a;
+    top: -70px;
+    right: 0;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    transition: transform .5s 0s;
+    transform: rotate(0deg); }
+    .form-get-offer .form-get-offer__close:hover {
+      color: #f8615a;
+      text-decoration: none;
+      transform: rotate(360deg); }
+
 .wpcf7-checkbox {
   display: inline-block; }
   .wpcf7-checkbox .wpcf7-list-item {
@@ -3022,7 +3074,8 @@ div.wpcf7 .ajax-loader {
   border-right: 0;
   color: #666;
   text-align: center;
-  clear: both; }
+  clear: both;
+  position: relative; }
   .form-content__title {
     font-size: 20px;
     font-weight: 700;
@@ -3137,6 +3190,8 @@ div.wpcf7 .ajax-loader {
       order: 3; } }
 .form-content_service .wpcf7-checkbox .wpcf7-list-item-label {
   padding-left: 25px; }
+.form-content_service .wpcf7-mail-sent-ok {
+  display: none !important; }
 
 .form-content_review .wpcf7-textarea {
   margin-bottom: 30px;
@@ -3191,6 +3246,29 @@ div.wpcf7 .ajax-loader {
       position: absolute;
       bottom: 44px;
       width: 100%; } }
+
+.form-sent-ok {
+  position: absolute;
+  left: 0px;
+  right: 0;
+  top: 20px;
+  bottom: 20px;
+  background: #f7f7f7;
+  text-transform: uppercase;
+  z-index: 1;
+  display: none; }
+  .form-sent-ok__inner {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
+  .form-sent-ok__title {
+    color: #f8615a;
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 10px; }
+  .form-sent-ok__subtitle {
+    font-size: 18px;
+    color: #666; }
 
 body {
   background: white;
@@ -3332,14 +3410,24 @@ img {
   .article li {
     padding-left: 1em;
     position: relative; }
-    .article li:before {
-      content: '\002e';
-      color: #f8615a;
-      position: absolute;
-      left: 2px;
-      top: -5px;
-      font-size: 30px;
-      line-height: .5; }
+  .article li:before {
+    content: '\002e';
+    color: #f8615a;
+    position: absolute;
+    left: 2px;
+    top: -5px;
+    font-size: 30px;
+    line-height: .5; }
+  .article ol {
+    counter-reset: list 0; }
+    .article ol li {
+      padding-left: 2em; }
+      .article ol li:before {
+        counter-increment: list;
+        content: counter(list) ".";
+        font-size: inherit;
+        top: 0;
+        line-height: 1.6; }
   .article blockquote {
     margin: 20px 0;
     padding: 5px 0 5px 20px;
@@ -3615,8 +3703,8 @@ img {
       visibility: hidden;
       position: absolute;
       transition: all 1s 0s;
-      left: 33px;
-      top: 100%;
+      right: 0;
+      top: 120%;
       width: 182px;
       padding: 10px;
       border: 1px solid;
@@ -4505,5 +4593,35 @@ img {
     display: -o-flex;
     display: flex;
     margin-bottom: 30px; } }
+
+#comments {
+  border-top: 1px solid #e5e5e5;
+  margin-top: 30px; }
+  #comments a {
+    color: #f8615a;
+    text-decoration: underline; }
+    #comments a:hover {
+      text-decoration: none; }
+  #comments .comment {
+    margin-bottom: 1em; }
+  #comments .children {
+    margin-top: 1em;
+    padding-left: 2em; }
+  @media (min-width: 550px) {
+    #comments .comment-form {
+      display: flex;
+      flex-wrap: wrap; } }
+  #comments .comment-notes {
+    margin-bottom: 10px;
+    width: 100%; }
+  #comments .comment-form__item {
+    margin-bottom: 10px;
+    width: 100%; }
+    @media (min-width: 550px) {
+      #comments .comment-form__item_author, #comments .comment-form__item_email {
+        width: 50%; } }
+    @media (min-width: 550px) {
+      #comments .comment-form__item_author {
+        padding-right: 20px; } }
 
 /*# sourceMappingURL=main.css.map */
