--- a/css/main.css
+++ b/css/main.css
@@ -3119,6 +3119,8 @@ div.wpcf7 .ajax-loader {
     text-decoration: underline; }
     .form-content form a:hover {
       text-decoration: none; }
+  .form-content .wpcf7-mail-sent-ok {
+    display: none !important; }
 
 .form_addservice-archive {
   max-width: 0;
@@ -3192,6 +3194,8 @@ div.wpcf7 .ajax-loader {
   padding-left: 25px; }
 .form-content_service .wpcf7-mail-sent-ok {
   display: none !important; }
+.form-content_service .wpcf7 .wpcf7-response-output {
+  margin: 0; }
 
 .form-content_review .wpcf7-textarea {
   margin-bottom: 30px;
@@ -3343,35 +3347,39 @@ img {
     margin-left: 1em;
     margin-bottom: .5em; }
 
-@media (min-width: 992px) {
-  .content {
-    margin-left: 300px; } }
-.content__inner {
-  max-width: 1100px;
-  width: 100%;
-  margin: 0 auto;
-  padding-bottom: 30px; }
+.content {
+  position: relative;
+  top: 0;
+  transition: top 1s 0s; }
   @media (min-width: 992px) {
-    .content__inner {
-      padding-top: 60px; } }
-  .content__inner_portfolio {
-    max-width: none;
-    padding: 0; }
-.content__body {
-  min-height: 300px; }
-.content__title {
-  margin: 20px 0;
-  text-align: center; }
-  @media (min-width: 992px) {
-    .content__title {
-      text-align: left;
-      margin: 40px 0; } }
-  .content__title h1 {
-    color: #666;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.2;
-    text-transform: uppercase; }
+    .content {
+      margin-left: 300px; } }
+  .content__inner {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 30px; }
+    @media (min-width: 992px) {
+      .content__inner {
+        padding-top: 60px; } }
+    .content__inner_portfolio {
+      max-width: none;
+      padding: 0; }
+  .content__body {
+    min-height: 300px; }
+  .content__title {
+    margin: 20px 0;
+    text-align: center; }
+    @media (min-width: 992px) {
+      .content__title {
+        text-align: left;
+        margin: 40px 0; } }
+    .content__title h1 {
+      color: #666;
+      font-size: 26px;
+      font-weight: 700;
+      line-height: 1.2;
+      text-transform: uppercase; }
 
 .b-content__img-wrap {
   text-align: center;
@@ -3933,11 +3941,11 @@ img {
       flex-basis: 40%;
       order: 1;
       padding-left: 20px; } }
-  .case__img {
+  .case__imgs {
     text-align: center;
     border: 1px solid #f7f7f7; }
     @media (min-width: 768px) {
-      .case__img {
+      .case__imgs {
         flex-basis: 60%;
         padding-top: 7px; } }
   .case__title_first {
@@ -4090,6 +4098,20 @@ img {
 @media (min-width: 1200px) {
   .case__form .form-content__title {
     text-align: left; } }
+
+.b-result {
+  margin: 30px 0;
+  padding: 30px 0;
+  border: 1px solid #e5e5e5;
+  border-left: 0;
+  border-right: 0;
+  clear: both;
+  color: #666; }
+  .b-result__title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1;
+    text-transform: uppercase; }
 
 .slick-prev,
 .slick-next {
